tz-local/resource/monitoring/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-prometheus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
#    nginx.ingress.kubernetes.io/auth-type: basic
#    nginx.ingress.kubernetes.io/auth-secret: basic-auth-prometheus
#    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - admin'
spec:
  rules:
  - host: prometheus.eks_domain
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-kube-prometheus-prometheus
          servicePort: 9090
  - host: prometheus.default.eks_project.eks_domain
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-kube-prometheus-prometheus
          servicePort: 9090
  - host: metric.default.eks_project.eks_domain
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-kube-state-metrics
          servicePort: 8080
  tls:
    - hosts:
        - prometheus.eks_domain
        - prometheus.default.eks_project.eks_domain
        - metric.default.eks_project.eks_domain
      secretName: ingress-prometheus-tls
